adding buttons and changing header width and

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         <div class="mainDiv">
             <div class="mainDiv___bgDiv">
                 </div>
-                <div class="mainDiv___titleBox">
-                    <div class="half-vw">
+                <div class="mainDiv___titleBox half-vw">
+                    <div>
                         <h1 class="mainDiv___titleBox___title responsive-big-title">
-                            You will never forget what you have to do.
+                            You will never forget what you have <span class="colorText">to do.</span>
                         </h1>
-
-                        <a href="#downDiv" class="orangeBtn">Get started</a>
+                        <p class="responsive-big-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <a href="#downDiv" class="purpleBtn">Get started</a>
                         </div>
                     </div>
                 </div>
